Simplify cartridge example for Sega Saturn boot.

--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,3 @@
-build
-
-pseudosaturn.sln
-pseudosaturn.sdf
-pseudosaturn.suo
-*.user
-pseudosaturn.vcxproj.filters
-pseudosaturn.vcxproj
-run.bat
-/cdpatch/Release
-/cdpatch/Debug
-/Debug
-cdpatch/cdpatch.aps
-cdpatch/cdpatch.suo
-cdpatch/cdpatch.sdf
-cdpatch/cdpatch.vcxproj.filters
-Debug/pseudosaturn.log
-*.opensdf
-*.idc
-*.cmake
-CMakeCache.txt
-CMakeFiles
-PS.BIN
-/src/PseudoSaturn.elf
-PseudoSaturn.BIN
-Makefile
-/bin2c
-/bin2c-prefix
-/concat
-/concat-prefix
-/iapetus-prefix
-/src/installer/ps_rom.c
-/src/cdload.c
-/src/codes.c
-/src/cdload/cdload.bin
-/src/cdload/cdload.elf
-/src/installer/installer.bin
-/src/installer/installer.elf
-/src/installer/installer.iso
-/releases
+*.o
+installer.bin
+*.elf
